<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.spotnext</groupId>
	<artifactId>groovy-native</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<java.version>11</java.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<compilerId>groovy-eclipse-compiler</compilerId>
					<compilerArguments>
						<configScript>${pom.basedir}/config.groovy</configScript>
					</compilerArguments>
					<failOnWarning>true</failOnWarning>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-compiler</artifactId>
						<version>3.6.0-01</version>
					</dependency>
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-batch</artifactId>
						<version>2.5.8-02</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>io.spotnext.groovynative.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.graalvm.nativeimage</groupId>
				<artifactId>native-image-maven-plugin</artifactId>
				<version>19.3.0</version>
				<configuration>
					<buildArgs>
						--verbose
						-cp "${settings.localRepository}/org/codehaus/groovy/groovy/3.0.0-rc-1/groovy-3.0.0-rc-1.jar"
						-H:+AllowVMInspection
						--allow-incomplete-classpath
						--report-unsupported-elements-at-runtime
						--initialize-at-build-time
						--enable-all-security-services
						--initialize-at-run-time=org.codehaus.groovy.control.XStreamUtils,groovy.grape.GrapeIvy,org.apache.ivy.core.module.descriptor.DependencyDescriptor,io.netty.handler.codec.http.HttpObjectEncoder,org.springframework.core.io.VfsUtils,io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator,io.netty.handler.ssl.ReferenceCountedOpenSslEngine
						--no-fallback
						--no-server
						-J-XX:-UseSharedSpaces 
						-H:ConfigurationFileDirectories=../src/main/resources/META-INF/native-image/
						-H:+ReportExceptionStackTraces
					</buildArgs>
<!-- 					<skip>true</skip> -->
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>native-image</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<includes>
						<include>**/*IT.java</include>
						<include>**/*IT.groovy</include>
					</includes>
					<!-- <debugForkedProcess>true</debugForkedProcess> -->
					<argLine>
						-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/
						-Xverify:none
						--add-opens java.base/java.lang=ALL-UNNAMED
						--illegal-access=deny
					</argLine>
					<trimStackTrace>false</trimStackTrace>
<!-- 					<skip>true</skip> -->
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Test.groovy</include>
					</includes>
					<!-- <debugForkedProcess>true</debugForkedProcess> -->
					<argLine>
						-Xverify:none
						--add-opens java.base/java.lang=ALL-UNNAMED
						--illegal-access=deny
					</argLine>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>3.0.0-rc-1</version>
		</dependency>

		<!-- testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.0-M1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.0-M1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>